// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RolloutProgressBar Component > renders correctly for phases with list variant 1`] = `
.emotion-0 {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  min-height: 70px;
}

.emotion-0 .progress-bar {
  height: 4px;
}

.emotion-0 .chart-container {
  min-height: 70px;
}

.emotion-0 .progress-chart {
  min-height: 45px;
}

.emotion-0 .progress-step {
  min-height: 45px;
}

.emotion-0 .progress-step,
.emotion-0 .progress-step-total {
  position: absolute;
  border-right-style: none;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #fafafa;
}

.emotion-0 .progress-step-number {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-top: -4px;
}

.emotion-0.no-background {
  background: none;
}

.emotion-0.stepped-progress .progress-step-total {
  margin-left: -0.25%;
  width: 100.5%;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border: 1px solid #424242;
  border-radius: 2px;
  height: 8px;
}

.emotion-0.stepped-progress .progress-step {
  min-height: 20px;
}

.emotion-1 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-column-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 .progress-chart.detailed {
  min-height: 20px;
}

.emotion-2 {
  border-right: 1px dashed;
  z-index: 10;
}

.emotion-6 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  letter-spacing: 0.03333em;
}

<div>
  <div
    class="relative flexbox column emotion-0 "
  >
    <div
      class="emotion-1"
    >
      <div
        class="progress-chart relative detailed"
      >
        <div
          class="progress-step"
          style="left: 0%; width: 2%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="absolute emotion-2"
          style="left: 0%;"
        />
        <div
          class="progress-step"
          style="left: 2%; width: 3%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="absolute emotion-2"
          style="left: 2%;"
        />
        <div
          class="progress-step"
          style="left: 5%; width: 5%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="absolute emotion-2"
          style="left: 5%;"
        />
        <div
          class="progress-step"
          style="left: 10%; width: 5%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="absolute emotion-2"
          style="left: 10%;"
        />
        <div
          class="progress-step"
          style="left: 15%; width: 85%;"
        >
          <div
            style="display: contents;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="left: 0%; width: 0%;"
            />
          </div>
        </div>
        <div
          class="progress-step relative flexbox progress-step-total"
        >
          <div
            class="progress-bar"
          />
        </div>
      </div>
      <p
        class="MuiTypography-root MuiTypography-body2 flexbox align-items-center emotion-6"
        style="justify-content: flex-end;"
      >
        0 failures
      </p>
    </div>
    <div
      class="flexbox space-between"
    >
      <span
        class="MuiTypography-root MuiTypography-caption emotion-7"
      >
        Devices in progress
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption emotion-7"
      >
        <span>
          Time until next phase: 
        </span>
        <span
          class=""
          data-mui-internal-clone-element="true"
        >
          21 days 22 h 45 m 09 s
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`RolloutProgressBar Component > renders correctly with list variant 1`] = `
.emotion-0 {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  min-height: 70px;
}

.emotion-0 .progress-bar {
  height: 4px;
}

.emotion-0 .chart-container {
  min-height: 70px;
}

.emotion-0 .progress-chart {
  min-height: 45px;
}

.emotion-0 .progress-step {
  min-height: 45px;
}

.emotion-0 .progress-step,
.emotion-0 .progress-step-total {
  position: absolute;
  border-right-style: none;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #fafafa;
}

.emotion-0 .progress-step-number {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-top: -4px;
}

.emotion-0.no-background {
  background: none;
}

.emotion-0.stepped-progress .progress-step-total {
  margin-left: -0.25%;
  width: 100.5%;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border: 1px solid #424242;
  border-radius: 2px;
  height: 8px;
}

.emotion-0.stepped-progress .progress-step {
  min-height: 20px;
}

.emotion-1 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-3 {
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-column-gap: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 .progress-chart.detailed {
  min-height: 20px;
}

.emotion-4 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-5 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear;
  transition: transform 0.2s linear;
  transform-origin: left;
  background-color: #1976d2;
  -webkit-transition: -webkit-transform .4s linear;
  transition: transform .4s linear;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.66;
  letter-spacing: 0.03333em;
}

<div>
  <div
    class="relative flexbox column emotion-0 "
  >
    <p
      class="MuiTypography-root MuiTypography-body2 flexbox align-items-center emotion-1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-2"
        data-testid="PendingOutlinedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8"
        />
        <circle
          cx="7"
          cy="12"
          r="1.5"
        />
        <circle
          cx="12"
          cy="12"
          r="1.5"
        />
        <circle
          cx="17"
          cy="12"
          r="1.5"
        />
      </svg>
      <span
        class="margin-left-small"
      >
        Queued to start
      </span>
    </p>
    <div
      class="emotion-3"
    >
      <span
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate emotion-4"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate emotion-5"
          style="transform: translateX(-100%);"
        />
      </span>
      <p
        class="MuiTypography-root MuiTypography-body2 flexbox align-items-center emotion-1"
        style="justify-content: flex-end;"
      >
        0 failures
      </p>
    </div>
    <div
      class="flexbox space-between"
    >
      <span
        class="MuiTypography-root MuiTypography-caption emotion-7"
      >
        Devices in progress
      </span>
      <span
        class="MuiTypography-root MuiTypography-caption emotion-7"
      >
        Current phase: 1 of 1
      </span>
    </div>
  </div>
</div>
`;

exports[`RolloutProgressBar Component > renders correctly with report variant 1`] = `
.emotion-0 {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  min-height: 70px;
}

.emotion-0 .progress-bar {
  height: 4px;
}

.emotion-0 .chart-container {
  min-height: 70px;
}

.emotion-0 .progress-chart {
  min-height: 45px;
}

.emotion-0 .progress-step {
  min-height: 45px;
}

.emotion-0 .progress-step,
.emotion-0 .progress-step-total {
  position: absolute;
  border-right-style: none;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #fafafa;
}

.emotion-0 .progress-step-number {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-top: -4px;
}

.emotion-0.no-background {
  background: none;
}

.emotion-0.stepped-progress .progress-step-total {
  margin-left: -0.25%;
  width: 100.5%;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border: 1px solid #424242;
  border-radius: 2px;
  height: 8px;
}

.emotion-0.stepped-progress .progress-step {
  min-height: 20px;
}

.emotion-1 {
  position: relative;
  overflow: hidden;
  display: block;
  height: 4px;
  z-index: 0;
  background-color: rgb(167, 202, 237);
}

@media print {
  .emotion-1 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-2 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  top: 0;
  -webkit-transition: -webkit-transform 0.2s linear;
  transition: transform 0.2s linear;
  transform-origin: left;
  background-color: #1976d2;
  -webkit-transition: -webkit-transform .4s linear;
  transition: transform .4s linear;
}

<div>
  <div
    class="relative flexbox column emotion-0 "
  >
    <div
      class="chart-container"
    >
      <div
        class="capitalized progress-step-number muted"
      >
        Phase 
        1
      </div>
      <span
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate emotion-1"
        role="progressbar"
      >
        <span
          class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate emotion-2"
          style="transform: translateX(-100%);"
        />
      </span>
    </div>
  </div>
</div>
`;
